2009-10-15  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Dave Hyatt.

        Return correct shorthand property name for
        background-repeat-x, background-repeat-y, background-position-x,
        background-position-y, -webkit-mask-position-x, -webkit-mask-position-y,
        -webkit-mask-repeat-x, -webkit-mask-repeat-y.

        https://bugs.webkit.org/show_bug.cgi?id=28972

        Test: fast/backgrounds/repeat/background-repeat-shorthand.html
WebCore

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):

LayoutTests:
        * fast/backgrounds/repeat/background-repeat-shorthand-expected.txt: Added.
        * fast/backgrounds/repeat/background-repeat-shorthand.html: Added.
        * fast/backgrounds/repeat/resources/background-repeat-shorthand.css: Added.
        * fast/backgrounds/repeat/resources/background-repeat-shorthand.js: Added.
        (getShorthand):


Canonical link: https://commits.webkit.org/41080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49616 268f45cc-cd09-0410-ab3c-d52691b4dbfc